# dice_roller

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: release.yml
dice_roller/: __init__.py  callback.py  compare.py  core.py  explode.py  math.py  misc.py  random.py  reroll.py  transformations.py
dice_roller/.github/workflows/: python-pkg.yml
