[tool.poetry]
name = "dice-roller"
version = "0.1.0"
description = "Python tool for rolling a lot of dices"
authors = ["Aleksei Zakharov <dokzlo13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
