[project]
name = "pydiceroll"
version = "0.4.2"
description = "Python tool for rolling a lot of dice"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [{ name = "Aleksei Zakharov", email = "dokzlo13@gmail.com" }]
keywords = ["dice", "simulation", "probability", "gaming", "numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.11"
dependencies = ["numpy >= 2.1.0", "dyce >= 0.6.2"]

[project.urls]
Homepage = "https://github.com/dokzlo13/dice_roller"
Repository = "https://github.com/dokzlo13/dice_roller"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dice_roller"]

[tool.uv]
package = false
